--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ body{
 h2{margin-bottom:20px}
 
 button{
-  padding:12px 26px;
+  padding:14px 28px;
   font-size:16px;
   border:none;
   border-radius:25px;
   cursor:pointer;
-  transition:.3s ease;
+  transition:transform .25s ease;
 }
 
 #yesBtn{
@@ -99,20 +99,16 @@ button{
 </div>
 
 <div class="popup" id="popup1">
-  <h3>🎉🎊 Yayyy! 🥰❤️</h3>
+  <h3>🎉 Yayyy! 🥰❤️</h3>
   <p>You made my heart smile 💖</p>
-  <button id="moreBtn">One more thing please… 🥺</button>
+  <button id="moreBtn">One more thing… 🥺</button>
 </div>
 
 <div class="popup" id="popup2">
-  <h3>Can we go on vodka date? 🥰🥂</h3>
+  <h3>Can we go on a date? 🥂💖</h3>
   <input type="date" id="datePick">
-  <button onclick="confirmDate()">Confirm Date 💖</button>
+  <button onclick="confirmDate()">Confirm Date 💕</button>
 </div>
-
-<audio id="music" loop>
-  <source src="https://cdn.pixabay.com/audio/2022/10/25/audio_0c8f2c6e5c.mp3">
-</audio>
 
 <script>
 const noBtn = document.getElementById("noBtn");
@@ -123,25 +119,31 @@ let textIndex = 0;
 
 const noTexts = [
  "No 🙈","Are you sure 😳","Think again 😏",
- "Really 🥺","Don’t break my heart 💔",
- "Last chance 😬","Stop running 😅","Just YES 😍"
+ "Really 🥺","Dil tod diya 💔",
+ "Last chance 😬","Stoppp 😅","Just YES 😍"
 ];
 
-noBtn.addEventListener("mouseenter",()=>{
+function runAway(){
+  // text change
   noBtn.innerText = noTexts[textIndex++ % noTexts.length];
 
+  // instant jump
   const x = Math.random()*(window.innerWidth-120);
   const y = Math.random()*(window.innerHeight-60);
   noBtn.style.left = x+"px";
   noBtn.style.top  = y+"px";
 
-  scale += .12;
+  // YES button grows faster
+  scale += 0.25; // 🔥 increased speed
   yesBtn.style.transform = `scale(${scale})`;
-});
+}
+
+// Desktop + Mobile support
+noBtn.addEventListener("mouseover", runAway);
+noBtn.addEventListener("touchstart", runAway);
+noBtn.addEventListener("click", runAway);
 
 yesBtn.onclick=()=>{
-  document.getElementById("music").volume=.4;
-  document.getElementById("music").play();
   document.getElementById("popup1").classList.add("show");
   rain();
 };
@@ -153,13 +155,12 @@ document.getElementById("moreBtn").onclick=()=>{
 
 function confirmDate(){
   const d=document.getElementById("datePick").value;
-  if(!d) return alert("Pick a date first 😄");
-  window.location.href=
-   `mailto:YOURMAIL@gmail.com?subject=Date Confirmed 💖&body=Our date is fixed on ${d} 🥰`;
+  if(!d) return alert("Date select karo 😄");
+  alert("Date fixed on "+d+" 💖🥰");
 }
 
 function rain(){
-  for(let i=0;i<50;i++){
+  for(let i=0;i<60;i++){
     const el=document.createElement("div");
     el.className=Math.random()>.5?"heart":"petal";
     el.innerHTML=Math.random()>.5?"❤️":"🌹";
