--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ let scale = 1;
 let textIndex = 0;
 
 const noTexts = [
- "No 🙈","Are you sure 😳","Think again 😏",
+ "Nop 🙈","Are you sure 😳","Think again 😏",
  "Really 🥺","Dil tod diya 💔",
  "Last chance 😬","Stoppp 😅","Just YES 😍"
 ];
