--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ button{
 
 <div class="card">
   <h2> Dear payu I know you don't have any filings for me<br>
-  So Can we be a friend's again? 💕</h2>
+  So Can we be a friend's again? please....🥺🥺🥺💕</h2>
   <button id="yesBtn">Yes 😍</button>
   <button id="noBtn">No 🙈</button>
 </div>
@@ -141,7 +141,7 @@ let scale = 1;
 let textIndex = 0;
 
 const noTexts = [
- "No 🙈","Are you sure 😳","Think again 😏",
+ "Nopp 😒","Are you sure 😳","Think again 😏",
  "Really 🥺","Dil tod diya 💔",
  "Last chance 😬","Stoppp 😅","Just YES 😍"
 ];
@@ -235,7 +235,7 @@ yesBtn.onclick=()=>{
     popup2.classList.add("show");
     setTimeout(()=>{
       dateSection.style.display="block";
-    },2000);
+    },4000);
   },7000); // ⬅ EARLIER TIMING
 };
 
